--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
-<doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Css Practice</title>
-<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My website</title>
+</head>
 <body>
-</body></html>
+    <div id="container">
+        <div id="header"> 
+            <h1>My website</h1>
+        </div>    
+        <div id="content">
+            <div id="nav">
+                <h3>Navigation</h3>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    </li>Contact</li>
+                </ul>
+            </div>
+
+            <div id="main">
+                <h2>Home page</h2>
+                <h2>Home page</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscin</p>
+
+                <p>Nunc commodo augue ut odio posuere, in pellentesq
+
+                </p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nihil corrupti ea cum, vitae voluptate in omnis pariatur asperiores earum deleniti quam id deserunt tenetur consectetur beatae officia ex magnam.
+            
+                </h2>
+
+            </div>
+        </div>
+        <div id="footer">
+        Copyright &copy; 2024 Jake  Wright 
+    </div>
+</body>
+</html>
