--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div id="nav">
                 <h3>Navigation</h3>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    </li>Contact</li>
+                    <li><a class="selected" href="">Home</a></li>
+                    <li><a href=""></a>About</li>
+                    </li><a href=""></a>Contact</li>
                 </ul>
             </div>
 
