--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
             </div>
         </div>
-        <div id="footer">
+        <div id="footer"> 
         Copyright &copy; 2024 Jake  Wright 
+    </div>
     </div>
 </body>
 </html>
