--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div id="footer"> 
-        Copyright &copy; 2024 Jake  Wright 
+        Copyright &copy; 2024 Lance White 
     </div>
     </div>
 </body>
