--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <p>Nunc commodo augue ut odio posuere, in pellentesq
 
                 </p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nihil corrupti ea cum, vitae voluptate in omnis pariatur asperiores earum deleniti quam id deserunt tenetur consectetur beatae officia ex magnam.
-            
-                </h2>
+                <img src="https://i.pinimg.com/originals/74/7a/7f/747a7f4ba2e9e1cf853d6e3d131950d2.jpg" alt="Ari" width="300" height="500">
+            </h2>
 
             </div>
         </div>
